# web-site-tester

./: LICENSE  pyproject.toml
web_site_tester/: README.md  cli.py  scanner.py  utils.py
web_site_tester.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
